--- a/apps/conv-serv/package.json
+++ b/apps/conv-serv/package.json
@@ -9,10 +9,10 @@
   "dependencies": {
     "@transl/eslint-config": "*",
     "@transl/tsconfig": "*",
+    "@transl/cli-convert": "*",
     "@types/node": "18.15.9",
     "form-data": "^4.0.0",
     "formidable": "^2.1.1",
-    "date-fns": "^2.29.3",
     "dotenv": "^16.0.2",
     "dotenv-expand": "^10.0.0",
     "eslint": "8.36.0",
