fix: update to faster

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,6 @@ next-env.d.ts
 apps/cli-convert/cmd/whisper-blas-bin-x64/
 apps/cli-convert/cmd/ffmpeg.exe
 apps/cli-convert/input/
+apps/cli-convert/cmd/whisper-faster/
+apps/cli-convert/models/
+
